--- a/application/themes/admin/assets/css/theme.css
+++ b/application/themes/admin/assets/css/theme.css
@@ -3889,6 +3889,8 @@ html.dark .inner-menu .inner-menu-toggle-inside:after {
 	color: transparent;
 	image-rendering: -webkit-optimize-contrast;
 	transform: translateZ(0);
+	height: 40px;
+    width: auto;
 }
 
 .header .separator {
