--- a/application/css/default.css
+++ b/application/css/default.css
@@ -707,3 +707,11 @@ input[type="radio"] {
 .comment {
     word-wrap: break-word;
 }
+
+.nice_button, input[type="submit"] {
+	height: 36px !important;
+}
+
+.online_realm_button, #ucp_characters h1 {
+	height: 40px !important;
+}
