Update simple theme Increase compatibility

--- a/application/themes/simple/assets/css/overwrite.css
+++ b/application/themes/simple/assets/css/overwrite.css
@@ -67,6 +67,7 @@
 /* [Popup] SweetAlert
 /*-------------------------------------------------------------------------*/
 .swal2-container {
+	z-index: 9999999999;
 	background-color: rgba(0, 0, 0, 0.6) !important;
 }
 
