Add fury (for Demon hunter class) color on character armory

--- a/application/modules/character/css/character.css
+++ b/application/modules/character/css/character.css
@@ -68,6 +68,7 @@
 .bg-focus {background:#d45719 !important;}
 .bg-energy {background:#cb9501 !important;}
 .bg-runic {background:#00bcde !important;}
+.bg-fury {background:#8400ff !important;}
 
 .item {
 	width:70px;
